Added Print Statementccdsdcsd

--- a/test-output/Suite/Test.html
+++ b/test-output/Suite/Test.html
@@ -75,7 +75,7 @@ function toggleAllBoxes() {
 <td><b>Instance</b></td>
 </tr>
 <tr>
-<td title='module.LaunchApplication.TC1()'><b>TC1</b><br>Test class: module.LaunchApplication</td>
+<td title='module.launchapplication.TC1()'><b>TC1</b><br>Test class: module.launchapplication</td>
 <td></td>
 <td>14</td>
 <td>module.LaunchApplication@6b58b9e9</td></tr>
