--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -36,7 +36,7 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">Test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="1">module.LaunchApplication</td><td><a href="#m1"><b>TC1</b>  </a></td><td class="numi">1</td><td>1680237822827</td><td class="numi">14294</td></tr>
+<tr class="passedodd"><td rowspan="1">module.launchapplication</td><td><a href="#m1"><b>TC1</b>  </a></td><td class="numi">1</td><td>1680237822827</td><td class="numi">14294</td></tr>
 </table>
 <h1>Test</h1>
 <h2 id="m1">module.LaunchApplication:TC1</h2>
