--- a/test-output/index.html
+++ b/test-output/index.html
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="module.LaunchApplication" class="method navigator-link" hash-for-method="TC1">TC1</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="module.launchapplication" class="method navigator-link" hash-for-method="TC1">TC1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -119,7 +119,7 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">module.LaunchApplication</span>
+              <span class="class-name">module.launchapplication</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -218,7 +218,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">module.LaunchApplication</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">module.launchapplication</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">TC1</span>
                 <span class="method-start">0 ms</span>
