--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6163d6">  <td>23/07/12 10:00:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="launchapplication.TC1()[pri:0, instance:module.launchapplication@485966cc]">TC1</td> 
-  <td>main@1623009085</td>   <td></td> </tr>
-<tr bgcolor="6163d6">  <td>23/07/12 10:01:05</td>   <td>7584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="launchapplication.TC2()[pri:0, instance:module.launchapplication@485966cc]">TC2</td> 
-  <td>main@1623009085</td>   <td></td> </tr>
+<tr bgcolor="7aa073">  <td>24/01/08 08:03:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="launchapplication.TC1()[pri:0, instance:module.launchapplication@2ed2d9cb]">TC1</td> 
+  <td>main@891786282</td>   <td></td> </tr>
+<tr bgcolor="7aa073">  <td>24/01/08 08:03:24</td>   <td>3382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="launchapplication.TC2()[pri:0, instance:module.launchapplication@2ed2d9cb]">TC2</td> 
+  <td>main@891786282</td>   <td></td> </tr>
 </table>
