--- a/test-output/old/Default Suite/methods.html
+++ b/test-output/old/Default Suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="af606c">  <td>24/01/08 08:44:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="launchapplication.TC1()[pri:0, instance:module.launchapplication@194bcebf]">TC1</td> 
-  <td>main@627318073</td>   <td></td> </tr>
-<tr bgcolor="af606c">  <td>24/01/08 08:44:45</td>   <td>5975</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="launchapplication.TC2()[pri:0, instance:module.launchapplication@194bcebf]">TC2</td> 
-  <td>main@627318073</td>   <td></td> </tr>
+<tr bgcolor="736ca5">  <td>24/01/08 09:25:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="launchapplication.TC1()[pri:0, instance:module.launchapplication@6e0f5f7f]">TC1</td> 
+  <td>main@1371957475</td>   <td></td> </tr>
+<tr bgcolor="736ca5">  <td>24/01/08 09:25:10</td>   <td>4823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="launchapplication.TC2()[pri:0, instance:module.launchapplication@6e0f5f7f]">TC2</td> 
+  <td>main@1371957475</td>   <td></td> </tr>
 </table>
